apps/media-downloaders/bazarr/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media-downloaders
spec:
  serviceName: bazarr
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr
          ports:
            - name: "http"
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: bazarr-media
              mountPath: /data/media
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: bazarr-media
          persistentVolumeClaim:
            claimName: bazarr-media
