apps/media-downloaders/bazarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media-downloaders
  labels:
    app: bazarr
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - name: "http"
      protocol: TCP
      targetPort: 6767
      port: 80
