apps/media-downloaders/bazarr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media-downloaders
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Bazarr"
    gethomepage.dev/description: "Subtitle Downloader"
    gethomepage.dev/group: "Media Downloaders"
    gethomepage.dev/icon: "bazarr"
spec:
  rules:
    - host: bazarr.home.mees-olivier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
  tls:
    - secretName: bazarr-tls
      hosts:
        - bazarr.home.mees-olivier.com
